<resources>
    <string name="app_name">CrowdFunding</string>

    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_transfer">Transfer Money</string>
    <string name="action_transaction">Transaction</string>


    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="btnEditProfile">Edit</string>

    <string name="textViewProf">About</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>

    <string name="transactions">Transactions</string>
    <string name="btnMonths">Last 3 Months</string>
    <string name="btnAll">All</string>

    <string name="transfer">Money Transfer</string>
    <string name="btnSave">Apply</string>
</resources>
